# virtual-processor

./: .gitignore  CMakeLists.txt  README.md  f_add1.c  f_add2.c  f_eicall.c  f_eijmp.c  f_elpm_arg1.c  f_elpm_arg2.c  f_elpm_noarg.c  f_fmul.c  f_fmuls.c  f_fmulsu.c  f_ijmp.c  f_jmp_rel.c  f_ldd.c  f_ldi.c  f_mov1.c  f_out.c  f_std.c  interpreter.c  interrupt.c  interrupt.h  main.c  makefile  mem_abs.c  mem_abs.h  types.h
tests/: eicall.s  eicall1.s  eicall1_0.s  eicall1_1.s  eicall1_2.s  eicall1_3.s  eicall1_4.s  eicall1_5.s  eicall1_6.s  eicall1_7.s  eicall2.s  eicall2_1.s  eicall2_2.s  eicall2_3.s  eicall2_4.s  eicall2_5.s  eicall2_6.s  eicall2_7.s  eicall3.s  eicall4.s  eicall5.s  eicall6.s  eijmp0.s  eijmp1.s  eijmp2.s  eijmp3.s  eijmp4.s  eijmp5.s  eijmp6.s  eijmp7.s  elpm_arg1.s  elpm_arg1_1.s  elpm_arg1_2.s  elpm_arg1_3.s  elpm_arg1_4.s  elpm_arg1_5.s  elpm_arg1_6.s  elpm_arg1_7.s  elpm_arg1_8.s  elpm_arg2.s  (+76 more)
tests/binary data/: compare.sh  eicall1_diff.dec  eicall1_diff.hex  eicall2_diff.dec  eicall2_diff.hex  eicall3_diff.dec  eicall3_diff.hex  eicall4_diff.dec  eicall4_diff.hex  eicall5_diff.dec  eicall5_diff.hex  eicall6_diff.dec  eicall6_diff.hex  eijmp1_diff.dec  eijmp1_diff.hex  eijmp2_diff.dec  eijmp2_diff.hex  eijmp3_diff.dec  eijmp3_diff.hex  elpm_arg1_1_diff.dec  elpm_arg1_1_diff.hex  elpm_arg1_2_diff.dec  elpm_arg1_2_diff.hex  elpm_arg1_3_diff.dec  elpm_arg1_3_diff.hex  elpm_arg1_diff.dec  elpm_arg1_diff.hex  elpm_arg2_1_diff.dec  elpm_arg2_1_diff.hex  elpm_arg2_2_diff.dec  elpm_arg2_2_diff.hex  elpm_arg2_diff.dec  elpm_arg2_diff.hex  (+107 more)
